Added some background styling to replace skin img
Added some background styling to replace skin image that was created
earlier. This commit adds some changes into layout.css and room.html and
adds tank-hi.png to images folder

--- a/room.html
+++ b/room.html
@@ -11,7 +11,8 @@
 </head>
 <body>
     <div class="container">
-        <div id="session-id" class="pull-right"></div>
+        <div id="sun"></div>
+		<div id="session-id" class="pull-right"></div>
         <h1 title="Thunder Tanks! HHOOOOOOO!">Thunder Tanks</h1>
         <section class="well well-sm">
             <dl id="controls" class="dl-horizontal">
@@ -39,6 +40,9 @@
             <img id="grey1" src="images/grey1.png" />
         </div>
     </div>
+	<div id="grass">
+		<img style="height:130px; width:250px; margin-top:-105px; float:right" src="images/tank-hi.png"/>
+	</div>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/lib/jquery-2.0.3.min.js"></script>
